bug-14293: Fix jalauditd audisp conf wording

--- a/audisp-jalauditd.conf
+++ b/audisp-jalauditd.conf
@@ -1,6 +1,6 @@
 # This file controls the configuration of the
-# syslog plugin. It simply takes events and writes
-# them to syslog.
+# jalauditd plugin. It takes events and sends
+# them to the JAL producer.
 
 active = yes
 direction = out
